syntax = "proto3";

package encoderfile;

import "proto/embedding.proto";
import "proto/token_classification.proto";
import "proto/sequence_classification.proto";

service Embedding {
  rpc Predict(embedding.EmbeddingRequest) returns (embedding.EmbeddingResponse);
  rpc GetModelMetadata(GetModelMetadataRequest) returns (GetModelMetadataResponse);
}

service SequenceClassification {
  rpc Predict(sequence_classification.SequenceClassificationRequest) returns (sequence_classification.SequenceClassificationResponse);
  rpc GetModelMetadata(GetModelMetadataRequest) returns (GetModelMetadataResponse);
}

service TokenClassification {
  rpc Predict(token_classification.TokenClassificationRequest) returns (token_classification.TokenClassificationResponse);
  rpc GetModelMetadata(GetModelMetadataRequest) returns (GetModelMetadataResponse);
}

message GetModelMetadataRequest {}

message GetModelMetadataResponse {
  string model_id = 1;
  ModelType model_type = 2;
  map<uint32, string> id2label = 3;
}

enum ModelType {
  MODEL_TYPE_UNSPECIFIED = 0;
  EMBEDDING = 1;
  SEQUENCE_CLASSIFICATION = 2;
  TOKEN_CLASSIFICATION = 3;
}
